# park_n_pi

./: .gitignore  LICENSE  README.md  requirements.txt
docker/: Dockerfile  docker-compose.yml
rl_agent/src/: zmq_coordinator.py
ros_park_n_pi/src/aruco_nav/: package.xml  setup.cfg  setup.py
ros_park_n_pi/src/aruco_nav/aruco_nav/: aruco_nav_node.py
ros_park_n_pi/src/raspbot_rl_env/: package.xml  setup.cfg  setup.py
ros_park_n_pi/src/raspbot_rl_env/raspbot_rl_env/: env.py  rl_supervisor.py  rl_supervisor.py.bak
ros_park_n_pi/src/raspbot_rl_env/scripts/: continoue_phase2.py  continoue_training.py  eval_policy.py  eval_wo_norm.py  run_training.py  run_wo_vecenv.py
ros_park_n_pi/src/raspbot_rl_interface/: CMakeLists.txt  package.xml
ros_park_n_pi/src/raspbotv2_bringup/: CMakeLists.txt  package.xml
ros_park_n_pi/src/raspbotv2_bringup/config/: ekf_config.yaml  mapper_params_online_async.yaml  nav2_params.yaml  slam_toolbox_config.yaml
ros_park_n_pi/src/raspbotv2_bringup/launch/: raspbotv2.launch.py  rl_training.launch.py
ros_park_n_pi/src/raspbotv2_bringup/meshes/: arm1_Link.stl  arm2_Link.stl  base_Link.stl  base_Link_cutted.stl  l1_Link.stl  l2_Link.stl  r1_Link.stl  r2_Link.stl
ros_park_n_pi/src/raspbotv2_bringup/protos/: RaspbotV2.proto
ros_park_n_pi/src/raspbotv2_bringup/urdf/: ROBOT.urdf  RaspbotV2.urdf  SUPERVISOR.urdf
ros_park_n_pi/src/raspbotv2_bringup/webots_worlds/: .rl_world.wbproj  .world.wbproj  rl_world.wbt  rl_world.wbt.bak  world.wbt
ros_park_n_pi/src/webots_py_ros2_driver/: package.xml  setup.cfg  setup.py
(+4 files in other folders)
